# OpenCV-Tesseract-OCR-Sudoku-Solver

./: .gitignore  CMakeLists.txt  README.md  Tesseract OCR + Open CV sudoku solver.sln
SRC/: main.cpp  name.cpp  sudoku solver.vcxproj
pruba/: name.cpp  pruba.vcxproj.filters
